--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="image-box">
                     <img draggable="false" src="./image/contact.png" alt="">
                 </div>
-                <form id="contact-form">
+                <form id="contact-form" action="https://formsubmit.co/rajeshbiswasa@gmail.com" method="POST">
 
                     <div class="form-group">
                         <div class="field">
