--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="image">
-            <img draggable="false" class="tilt" src="./image/DSC_2093-removebg-preview.jpg" alt="">
+            <img draggable="false" class="tilt" src="./image/profileHero.jpeg" alt="">
         </div>
     </section>
     <!-- hero section ends -->
@@ -79,10 +79,10 @@
                 <img draggable="false" class="tilt" src="./image/pic.jpg" alt="">
             </div>
             <div class="content">
-                <h3>I'm Rajesh</h3>
-                <span class="tag">Java Backend Developer</span>
+                <!-- <h3>I'm Rajesh</h3>
+                <span class="tag">Java Backend Developer</span> -->
 
-                <p>Skilled Backend Developer and
+                <p>Skilled Java Backend Developer and
                     Computer Science graduate with
                     proficiency in Java. Problem
                     Solving mindset and quick
@@ -183,7 +183,7 @@
                 <div class="image-box">
                     <img draggable="false" src="./image/contact.png" alt="">
                 </div>
-                <form id="contact-form" action="https://formsubmit.co/rajeshbiswasa@gmail.com" method="POST">
+                <form id="contact-form">
 
                     <div class="form-group">
                         <div class="field">
