--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="#work">WORK</a></li>
                 <li><a href="#skills">SKILLS</a></li>
                 <li><a href="#contact">CONTACT</a></li>
+                <li><a href="./Document/Rajesh_Biswas_Resume.pdf" target="_blank">RESUME</a></li>
             </ul>
         </nav>
     </header>
@@ -64,7 +65,7 @@
             </div>
         </div>
         <div class="image">
-            <img draggable="false" class="tilt" src="./image/profileHero.jpeg" alt="">
+            <img draggable="false" class="tilt" src="./image/giphy.webp" alt="">
         </div>
     </section>
     <!-- hero section ends -->
