--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#work">PROJECTS</a></li>
                 <li><a href="#skills">SKILLS</a></li>
-                <li><a href="#stat">STAT</a></li>
+                <!-- <li><a href="#stat">STATS</a></li> -->
                 <li><a href="#contact">CONTACT</a></li>
                 <li><a href="./Document/Rajesh_Biswas_Resume.pdf" target="_blank">RESUME</a></li>
             </ul>
@@ -84,7 +84,7 @@
                 <!-- <h3>I'm Rajesh</h3>
                 <span class="tag">Java Backend Developer</span> -->
 
-                <p>Skilled Java Backend Developer and
+                <!-- <p>Skilled Java Backend Developer and
                     Computer Science graduate with
                     proficiency in Java. Problem
                     Solving mindset and quick
@@ -93,7 +93,19 @@
                     environments quickly. Looking
                     for a challenging role in the
                     industry to utilize my skill and
-                    learning. </p>
+                    learning. </p> -->
+
+                <p>Aspiring Java Backend Developer
+                    and Computer Science graduate
+                    with proficiency in Java. Problem
+                    Solving mindset and quick learner
+                    who is proficient in writing clean,
+                    extendable, and maintainable
+                    code. Looking forward to joining a
+                    progressive and challenging
+                    organization that will push my
+                    technical and analytical skills and
+                    help me grow professionally.</p>
 
                 <!-- <div class="box-container">
             <div class="box">
@@ -125,19 +137,45 @@
         <div class="box-container">
 
             <!-- 1st card project -->
-            <!-- <div class="box tilt">
-                <img draggable="false" src="./image/Unsplash.png" alt="" />
-                <div class="content">
-                    <div class="tag">
-                        <h3>Portfolio Website</h3>
+            <!-- <div class="tilt">
+                
+                <div class="tag">
+                    <h3>Portfolio Website</h3>
+                </div>
+                <div class="box">
+                    <img draggable="false" src="./image/Unsplash.png" alt="" />
+                    <div class="content">
+                        <div class="desc">
+                            <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
+                                <b><span>Tech Stack:</span> </b><img src="https://skillicons.dev/icons?i=html,css,javascript,github" alt="">
+                            <div class="btns">
+                                <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+                                <a href="#" class="btn"
+                                    target="_blank">Code
+                                    <i class="fas fa-code"></i></a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="desc">
-                        <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here
-                            only!</p>
-                        <div class="btns">
-                            <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-                            <a href="https://github.com/jigar-sable/Portfolio-Website" class="btn" target="_blank">Code
-                                <i class="fas fa-code"></i></a>
+                </div>
+            </div> -->
+            <!-- 2st card project -->
+            <!-- <div class="tilt">
+                
+                <div class="tag">
+                    <h3>Portfolio Website</h3>
+                </div>
+                <div class="box">
+                    <img draggable="false" src="./image/Unsplash.png" alt="" />
+                    <div class="content">
+                        <div class="desc">
+                            <p>Personal portfolio website. Don't need much info about it, just scroll down. You're here only!</p>
+                            <b><span>Tech Stack:</span> </b><img src="https://skillicons.dev/icons?i=html,css,javascript,github" alt="">
+                            <div class="btns">
+                                <a href="#" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+                                <a href="#" class="btn"
+                                    target="_blank">Code
+                                    <i class="fas fa-code"></i></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -183,8 +221,7 @@
 
             <img
                 src="https://github-readme-stats.vercel.app/api?username=rajesh-biswasa&show_icons=true&theme=default" />
-            <img
-                src="https://github-readme-streak-stats.herokuapp.com/?user=rajesh-biswasa&theme=default" />
+            <img src="https://github-readme-streak-stats.herokuapp.com/?user=rajesh-biswasa&theme=default" />
 
 
         </div>
@@ -269,8 +306,9 @@
                 <a href="#about"><i class="fas fa-chevron-circle-right"></i> about</a>
                 <a href="#work"><i class="fas fa-chevron-circle-right"></i> project</a>
                 <a href="#skills"><i class="fas fa-chevron-circle-right"></i> skills</a>
-                <a href="#stat"><i class="fas fa-chevron-circle-right"></i> statitics</a>
-                <a href="./Document/Rajesh_Biswas_Resume.pdf" target="_blank"><i class="fas fa-chevron-circle-right"></i> resume</a>
+                <!-- <a href="#stat"><i class="fas fa-chevron-circle-right"></i> statitics</a> -->
+                <a href="https://drive.google.com/u/0/uc?id=1yp574O0eBi2LrsqJ0pPQqnKmiDI3AKJQ&export=download" target="_blank"><i
+                        class="fas fa-chevron-circle-right"></i> resume</a>
             </div>
 
             <div class="box">
