--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- navbar starts -->
     <header>
         <!-- <a href="/" class="logo"><i class="fa-brands fa-r-project"></i> Rajesh</a> -->
-        <a href="#" class="logo"><i class="fa-brands fa-r-project"></i> Rajesh</a>
+        <a href="index.html" class="logo"><i class="fa-brands fa-r-project"></i> Rajesh</a>
 
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
@@ -34,7 +34,7 @@
                 <li><a href="#skills">SKILLS</a></li>
                 <!-- <li><a href="#stat">STATS</a></li> -->
                 <li><a href="#contact">CONTACT</a></li>
-                <li><a href="./Document/Rajesh_Biswas_Resume.pdf" target="_blank">RESUME</a></li>
+                <li><a href="https://drive.google.com/u/0/uc?id=1yp574O0eBi2LrsqJ0pPQqnKmiDI3AKJQ&export=download" target="_blank">RESUME</a></li>
             </ul>
         </nav>
     </header>
@@ -216,7 +216,7 @@
     <section class="stat" id="stat">
         <h2 class="heading">📈 <span>Statistics </span></h2>
         <!-- Github and Statitics Section start -->
-
+        <p align="center" style="font-size: 20px;">GitHub Profile View: <img src="https://komarev.com/ghpvc/?username=rajesh-biswasa&label=Profile%20views&color=0e75b6&style=flat" alt="biswasraj" /> </p>
         <div class="github_stat">
 
             <img
